--- a/airbnb_app/android/app/build.gradle
+++ b/airbnb_app/android/app/build.gradle
@@ -134,6 +134,13 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-camera'){
+    exclude group: "com.google.android.gms"
+    implementation 'com.android.support:exifinterface:27.+'
+    implementation ('com.google.android.gms:play-services-vision:17.0.2') {
+        force = true
+    }
+}
     implementation project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
