--- a/airbnb_app/android/build.gradle
+++ b/airbnb_app/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         minSdkVersion = 16
         compileSdkVersion = 28
         targetSdkVersion = 27
-        supportLibVersion = "28.0.0"
+        supportLibVersion = "28.0.2"
     }
     repositories {
         google()
@@ -36,6 +36,16 @@ allprojects {
             name 'Google'
 }
     }
+
+    subprojects {
+  project.configurations.all {
+    resolutionStrategy.eachDependency { details ->
+      if (details.requested.group == 'com.android.support'
+          && !details.requested.name.contains('multidex') ) {
+        details.useVersion "27.0.1"
+      }
+    }
+  }
 }
 
 
