--- a/airbnb_app/package.json
+++ b/airbnb_app/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "16.6.3",
     "react-native": "0.58.6",
+    "react-native-camera": "^1.13.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-navigation": "^3.3.2",
     "styled-components": "^4.1.3"
